Improve tests and fix test issues