@@ -52,13 +52,25 @@
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>3.2.5</version>
                 <configuration>
+                    <useManifestOnlyJar>false</useManifestOnlyJar>
+                    <argLine>--add-opens java.base/java.lang=ALL-UNNAMED --add-opens java.base/sun.misc=ALL-UNNAMED --add-opens java.base/java.util=ALL-UNNAMED</argLine>
                     <systemPropertyVariables>
-                        <nacos.server>${env.NACOS_SERVER:-127.0.0.1:8848}</nacos.server>
-                        <nacos.username>${env.NACOS_USERNAME:-nacos}</nacos.username>
-                        <nacos.password>${env.NACOS_PASSWORD:-nacos}</nacos.password>
+                        <nacos.server>127.0.0.1:8848</nacos.server>
+                        <nacos.username>nacos</nacos.username>
+                        <nacos.password>nacos</nacos.password>
                     </systemPropertyVariables>
                 </configuration>
             </plugin>
         </plugins>
     </build>
+
+    <reporting>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-report-plugin</artifactId>
+                <version>3.2.5</version>
+            </plugin>
+        </plugins>
+    </reporting>
 </project>
